--- a/content/about/about.html
+++ b/content/about/about.html
@@ -3,24 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
-    <link rel="stylesheet" href="styles.css"> </head>
-</style>
-  <body > 
-    <article>
-      <div id="banner">
-        <video autoplay loop>
-          <source src="/video/video.crdownload">
-        </video >
-      </div>
+    <link rel="stylesheet" href="/style.css">
+    <style>
+    </style>
+  </head>
+   <body > 
+    <article style="padding: 100px 0;">
       <div class="container">
-
         <div id="menu">
           <div class="sec">
             <h3>Menu</h3>
             <ul>
-              <li><a href="index.html">Home</a></li>
+              <li><a href="/index.html">Home</a></li>
               <li><a href="/about/about.html">About</a><li>
-              <li class="unv">Trips</li>
+              <li class="unv" title="Unavailable">Trips</li>
               <li class="unv">Recipies</li>
             </ul>
           </div>
@@ -60,46 +56,38 @@
         </div>
         <div id="main">
           <div class="sec">
-          <h3>Welcome!</h3>
+            <h3>About</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
               <p>
-
-Welcome to my corner of the internet! This page is a personal space where I'll share my trips, recipes, favorite songs, and maybe more cool stuff in the future. I hope you like it.
+              I'm a 20 yo from Costa Rica who loves computers, music and videogames.
               </p>
               <br>
               <p>
+              I'd like to talk more about this page tho, first time I saw a website like this it was from <a href="https://www.bugswriter.com/" class="link" target="_blank">bugswriter</a>, I have never thought about the idea of having your own space on the internet where you can do whatever you want for so little money! I just need more creativity. Almost every personal website has this same home, about, blog pages and after some websites it gets boring, problem is, I'm not creative at all.
+              </p>
+              <br> 
+              <p>
+              For now I have a trips sections, I'm planning on going to big mountains someday, i'd like to document every trip. I will also have a recipies section, I don't know how to cook yet tho, I hope that section makes me learn how to cook.
+              </p>
+              <br>
+              <p>
+              That's it for this page, hope you like it, suggest cool stuff and content through my Discord or Email.
 
-This page is still under development, if you find anything weird, please let me know through my email or Discord.
               </p>
            </div>
           </div>
           <div class="main-sec">
-            <div class="sec">
-              <h3>Updates</h3>
-              <div class="new-container">
-                <div class="new">
-                  <span>Page creation</span>
-                  <span class="date">22 Oct 2023</span>
-                </div>
-                <div>
-                  <p class="up-p">After a lot of work, page is finally up </p>
-                </div>
-              </div>
-            </div>
-            <div class="sec">
-              <h3 class="">Very cool pic</h3>
-              <div class="img-class">
-              <img id="cool" src="http://0x0.st/HJNU.jpeg" alt="very cool pic">
-              <p class="gray-text"><i>-. Manga Climber</i></p>
-              </div>
-            </div>
+            
           </div>
         </div>
         <div id="guestbook">
-          <div class="sec-chat">
+          <div class="sec">
             <h3>Chat</h3>
-              <p>In progress</p>
-              <img id="prog" src="http://0x0.st/HJa2.jpeg">
+            <div>
+              In progress
+            </div>
+            <img id="prog" src="http://0x0.st/HJa2.jpeg">
+          </div>
         </div>
       </div>
 
