--- a/content/about/about.html
+++ b/content/about/about.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class="sec">
-            <h3>Cool song</h3>
+            <h3>Cool Song</h3>
             <div class="sub-sec">
               <div class="mini-container">
                 <div style="margin-top: 2px">
@@ -49,7 +49,7 @@
           <div style="margin-top: 5px">
             <marquee onmouseover="this.stop()" onmouseout="this.start()" id="gifs" scrollamount="3">
             <a href="https://landchad.net" target="_blank"><img src="https://landchad.net/pix/landchad.gif" alt="LandChad.net"></a>
-<a href="https://melankorin.net/"><img src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
+<a href="https://melankorin.net/"><img target="_blank" src="https://melankorin.net/assets/img/buttons/button-1.gif" alt=""></a>
             </marquee>
           </div>
           </div>
@@ -59,15 +59,15 @@
             <h3>About</h3>
             <div class="sub-sec wel-sec" style="padding:10px;">
               <p>
-              I'm a 20 yo from Costa Rica who loves computers, music and videogames.
+              I'm a 20-year-old from Costa Rica who loves computers, music, and video games.
               </p>
               <br>
-              <p>
-              I'd like to talk more about this page tho, first time I saw a website like this it was from <a href="https://www.bugswriter.com/" class="link" target="_blank">bugswriter</a>, I have never thought about the idea of having your own space on the internet where you can do whatever you want for so little money! I just need more creativity. Almost every personal website has this same home, about, blog pages and after some websites it gets boring, problem is, I'm not creative at all.
+              <p> 
+              I'd like to talk more about this page though. The first time I saw a website like this was from <a href="https://www.bugswriter.com/" class="link" target="_blank">bugswriter</a>. I had never thought about the idea of having your own space on the internet where you can do whatever you want for so little money! I just need more creativity. Almost every personal website has the same home, about, and blog pages, and after some websites, it gets boring. The problem is, I'm not creative at all.
               </p>
               <br> 
               <p>
-              For now I have a trips sections, I'm planning on going to big mountains someday, i'd like to document every trip. I will also have a recipies section, I don't know how to cook yet tho, I hope that section makes me learn how to cook.
+              For now, I have a trips section. I'm planning on going to big mountains someday, and I'd like to document every trip. I will also have a recipes section, even though I don't know how to cook yet. I hope that section makes me learn how to cook.
               </p>
               <br>
               <p>
